@@ -423,6 +423,49 @@ under the License.
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>jdk11+</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  -Djdk.attach.allowAttachSelf=true
+                  --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                  --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                  --add-exports=java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
+                  --add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED
+                  --add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED
+                  --add-exports=java.sql/java.sql=ALL-UNNAMED
+                  --add-opens=java.base/java.lang.module=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.math=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.module=ALL-UNNAMED
+                  --add-opens=java.base/jdk.internal.util.jar=ALL-UNNAMED
+                  --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                  --add-opens=java.base/java.io=ALL-UNNAMED
+                  --add-opens=java.base/java.nio=ALL-UNNAMED
+                  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                  --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                  --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                  --add-opens=java.base/java.util=ALL-UNNAMED
+                  --add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
   </profiles>
 
 </project>
